# SteadyDancer-app

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  README.md  db.py  errors.py  main.py  pyproject.toml
apps/api/routes/: projects.py  steadydancer.py
apps/api/schemas/: assets.py  experiments.py  projects.py  steadydancer.py
apps/api/services/: assets.py  experiments.py  projects.py  steadydancer_jobs.py
apps/api/tests/: test_auth_and_paths.py  test_errors.py
apps/web/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: Layout.tsx  index.ts  ui.tsx
apps/web/src/pages/: DashboardPage.tsx  ProjectDetailPage.tsx  ProjectsListPage.tsx  index.ts
apps/web/src/pages/tabs/: AssetsTab.tsx  ExperimentsTab.tsx  JobsTab.tsx  index.ts
apps/worker/: .env.example  README.md  celery_app.py  config.py  main.py  pyproject.toml
apps/worker/tasks/: steadydancer.py
assets/: README.md
docs/: DFloat11_intro.md  api_and_data.md  architecture.md  quickstart.md
infra/: docker-compose.dev.yml
infra/docker/: api.Dockerfile  worker.Dockerfile
libs/py_core/: __init__.py  celery_client.py  config.py  projects.py  s3_storage.py  steadydancer_prompts.py
libs/ts_ui/: README.md  package.json  tsconfig.json
libs/ts_ui/src/: index.ts
libs/ts_ui/src/components/: Button.tsx
scripts/: compress_steadydancer_dfloat11.py  dev_api.sh  dev_down.sh  dev_up.sh  dev_web.sh  dev_worker.sh  download_models.py
