[project]
name = "steadydancer-api"
version = "0.1.0"
description = "SteadyDancer HTTP API service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "httpx>=0.24.0,<1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0,<9.0.0",
    "httpx>=0.24.0,<1.0.0",
]

