[project]
name = "steadydancer-api"
version = "0.1.0"
description = "SteadyDancer HTTP API service"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
dependencies = [
    "celery[redis]>=5.3.0,<6.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "modelscope",
    "huggingface_hub",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0"
    
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]
