[project]
name = "steadydancer-worker"
version = "0.1.0"
description = "SteadyDancer background worker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "celery[redis]>=5.3.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0,<9.0.0",
]
