[project]
name = "steadydancer-worker"
version = "0.1.0"
description = "SteadyDancer background worker"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
dependencies = [
    "celery[redis]>=5.3.0,<6.0.0",
    "pydantic>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "flash_attn",
    "gradio>=5.0.0",
    "numpy>=1.23.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
