[project]
name = "steadydancer-worker"
version = "0.1.0"
description = "SteadyDancer background worker"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
dependencies = [
    "celery[redis]>=5.3.0,<6.0.0",
    "pydantic>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "torch",
    "torchvision",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "flash_attn",
    "gradio>=5.0.0",
    "numpy>=1.23.5,<2",
    "dfloat11[cuda12]"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
